EPAD8-967: Fix overflow on components next to a floated element.

--- a/services/drupal/web/themes/epa_theme/source/_patterns/03-uswds/alert/_alert.scss
+++ b/services/drupal/web/themes/epa_theme/source/_patterns/03-uswds/alert/_alert.scss
@@ -2,4 +2,5 @@
 
 .usa-alert {
   margin-bottom: rem(gesso-spacing(2));
+  overflow: auto;
 }
